- Right-click Scan option now scans for HTTPS.
- Check all credentials option no longer tries blank passwords/username as pass
- Added a read optimization to the console code. This will reduce load in a team 
  engagement + make consoles feel faster when there is output.
- Armitage now opens the event log tab instead of a metasploit console tab in team
  mode.

10.20.11
--------
- Modified hail mary attack to get a little more success with some common Windows
  attacks.

10.17.11 
--------
- Added menu item to dump hashes using the old lsass method or the smart hashdump
  registry method.

10.13.11 take II?
--------
- updated msf3/data directories to account for new install locations.
- Removed Meterpreter -> Access - > Duplicate because it is now redundant with
  Meterpreter -> Access -> Pass Session
- Updated Meterpreter -> Access -> Pass Session to have LPORT of default 
  Meterpreter listener. Click Launch to simply duplicate your current session.
- Added Meterpreter -> Access -> Steal Token to list and steal user/group tokens
- Updated meterpreter multiplexer to not expect output from rev2self. 

10.13.11
--------
- added ability to set up VNC on a target when connected to a remote Metasploit
- Armitage now tells you where to connect your VNC client to access the desktop
  of a compromised host. You'll need to have a local VNC client available.

10.12.11 - oooh SECKSY
-------- 
- fixed a typo in the default armitage settings file.
- made PAYLOAD helper friendly to post/windows/manage/payload_inject
- Meterpreter -> Access -> Pass Session now uses payload_inject

10.12.11
--------
- Meterpreter N -> Hashdump now runs post/windows/gather/smart_hashdump module.
  This gives you the benefit of seeing its output and it works in more
  situations. 
- Right-click the tab X button and select Save Screenshot to take a screenshot
  of the current tab. This image will render the tab contents exactly as seen